[package]
name = "aion-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared gRPC and serde wire contracts for Aion servers, clients, and workers."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-proto"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "grpc", "protobuf"]
categories = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[features]
default = []
generated = ["dep:aion-proto-generated"]

[dependencies]
aion-core = { version = "0.9.0", path = "../aion-core" }
aion-proto-generated = { version = "0.9.0", path = "../aion-proto-generated", optional = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
uuid.workspace = true
tonic-prost = "=0.14.5"

[dev-dependencies]
aion-store = { version = "0.9.0", path = "../aion-store" }
