[package]
name = "aion-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Aion workflow server library: HTTP, gRPC, WebSocket, and worker endpoints. Run it with the `aion` binary from the aion-cli crate."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-server"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "server", "grpc"]
categories = ["asynchronous", "development-tools"]

[lints]
workspace = true

[dependencies]
aion = { package = "aion-rs", version = "0.6.1", path = "../aion" }
aion-proto = { version = "0.6.1", path = "../aion-proto", features = ["generated"] }
aion-store-libsql = { version = "0.6.1", path = "../aion-store-libsql" }
aion-store = { version = "0.6.1", path = "../aion-store" }
aion-package = { version = "0.6.1", path = "../aion-package" }
# Server-side authoring toolchain. It embeds NO Gleam compiler — it only
# spawns the external `gleam` binary — so depending on it adds no compiler to
# aion-server (CN7/C15). The authoring endpoints stay dark unless
# `[authoring].gleam_path` is configured.
aion-toolchain = { version = "0.6.1", path = "../aion-toolchain" }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
aion-core = { version = "0.6.1", path = "../aion-core" }
dashmap = { workspace = true }
uuid.workspace = true
futures.workspace = true
chrono = { workspace = true, features = ["serde"] }
prost.workspace = true
tokio-stream = "0.1"
# Names the typed body length-limit error so the deploy archive upload can
# distinguish "over deploy.max_archive_bytes" (413) from transport read
# failures; same version axum already uses internally.
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
rust-embed = "8.11.0"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml = "1.1.2"
prometheus = "0.14.0"
async-trait.workspace = true
base64 = "0.22.1"
# jsonwebtoken 10 panics at validation time unless exactly one crypto-provider
# feature is selected; rust_crypto is the pure-Rust provider.
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"], optional = true }

[dev-dependencies]
aion-worker = { path = "../aion-worker" }
tempfile = "3.27.0"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-tungstenite = "0.29.0"
# Deploy e2e builds hostile DEFLATE-bomb archives; PackageBuilder writes
# Stored entries only, so it cannot produce one.
zip = { workspace = true }

[features]
default = []
auth = ["dep:jsonwebtoken", "dep:reqwest"]
