[package]
name = "aion-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Aion workflow server library: HTTP, gRPC, WebSocket, and worker endpoints. Run it with the `aion` binary from the aion-cli crate."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-server"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "server", "grpc"]
categories = ["asynchronous", "development-tools"]

[lints]
workspace = true

[dependencies]
aion = { package = "aion-rs", version = "0.8.0", path = "../aion" }
aion-proto = { version = "0.8.0", path = "../aion-proto", features = ["generated"] }
# libSQL durable backend. Now OPTIONAL: the ablative stack (haematite + liminal)
# is the default, so a stock build no longer links libSQL. Enabled only by the
# `libsql-backend` feature, which lights up the `backend = libsql` arm for a
# lightweight/embedded opt-out build.
aion-store-libsql = { version = "0.8.0", path = "../aion-store-libsql", optional = true }
aion-store = { version = "0.8.0", path = "../aion-store" }
# Single-node haematite event-store backend. OPTIONAL and OFF by default: a
# default aion-server build does not link aion-store-haematite (nor its
# transitive haematite engine), so the default dependency surface and backend
# selection are byte-identical to before. Enabled only by the
# `haematite-backend` feature, which lights up the `backend = haematite` arm.
aion-store-haematite = { version = "0.8.0", path = "../aion-store-haematite", optional = true }
aion-package = { version = "0.8.0", path = "../aion-package" }
# Server-side authoring toolchain. It embeds NO Gleam compiler — it only
# spawns the external `gleam` binary — so depending on it adds no compiler to
# aion-server (CN7/C15). The authoring endpoints stay dark unless
# `[authoring].gleam_path` is configured.
aion-toolchain = { version = "0.8.0", path = "../aion-toolchain" }
# In-process AWL checker, semantic index, canonical printer, and stopgap emitter
# used by the browser authoring facade.
aion-awl = { version = "0.8.0", path = "../aion-awl" }
aion-awl-package = { version = "0.8.0", path = "../aion-awl-package" }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
aion-core = { version = "0.8.0", path = "../aion-core" }
dashmap = { workspace = true }
uuid.workspace = true
sha2.workspace = true
futures.workspace = true
chrono = { workspace = true, features = ["serde"] }
prost.workspace = true
tokio-stream = { workspace = true }
# Names the typed body length-limit error so the deploy archive upload can
# distinguish "over deploy.max_archive_bytes" (413) from transport read
# failures; same version axum already uses internally.
http-body-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
# Provides the CorsLayer the public HTTP router applies so a browser ops console
# served from a different origin (e.g. the Vite dev server) can call the API.
# CORS is config-driven and secure-by-default: with no configured origins the
# layer is not installed and no cross-origin request is allowed.
tower-http = { workspace = true }
# Embeds the built ops-console bundle (the committed `ops-console-embed/` bundle)
# into the binary. ALWAYS on — the ops console is part of the product, so a plain
# `cargo build -p aion-server` ships the real web UI at `/`. There is no cargo
# feature: the bundle is committed and rust_embed serves it unconditionally.
rust-embed = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml = { workspace = true }
prometheus = { workspace = true }
async-trait.workspace = true
base64 = { workspace = true }
# jsonwebtoken 10 panics at validation time unless exactly one crypto-provider
# feature is selected; rust_crypto is the pure-Rust provider.
jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
# Cross-node outbox dispatch over the liminal bus (#13). OPTIONAL and OFF by
# default: a default aion build does not link liminal-sdk (nor its transitive
# beamr distribution). Enabled only by the `liminal-transport` feature. Resolved
# from crates.io (liminal-sdk); the default `std` feature carries the real TCP
# transport and the canonical wire codec.
liminal-sdk = { workspace = true, optional = true }
# Used only by the feature-gated #13-0 integration test to stand up a real
# liminal server over loopback TCP (the spike's worker-side endpoint). Optional
# and enabled only by `liminal-transport`, so a default build never pulls it.
liminal-server = { workspace = true, optional = true }
# Liminal core protocol types (LSUB-L2): the connection-keyed `ConnectionNotifier`
# receives a `liminal::protocol::WorkerRegistration` to build a registry entry from.
# Already in the dependency graph transitively (liminal-sdk/liminal-server depend
# on it); named directly only so the in-band registration notifier can reference
# the wire type. Optional, enabled only by `liminal-transport`.
liminal = { workspace = true, optional = true }

[dev-dependencies]
# The libSQL backend is now optional in the production graph (behind
# `libsql-backend`), but several integration tests (the LSUB-PROD cross-node
# round-trip, the libSQL outbox e2e) construct a `LibSqlStore` directly. Listing
# it here keeps it available for ALL `cargo test` builds without forcing the
# production default to link it.
aion-store-libsql = { version = "0.8.0", path = "../aion-store-libsql" }
# The LSUB-1 cross-node dispatch e2e drives a REAL aion-worker over the liminal
# push transport, so the test build enables the worker's `liminal-transport`
# feature. A default (non-test) build never pulls this; the worker feature is OFF
# in the production dependency graph.
aion-worker = { path = "../aion-worker", features = ["liminal-transport"] }
aion-core = { version = "0.8.0", path = "../aion-core" }
# The NOI-6 intervention-routing e2e drives a live agent session through the
# neutral `AgentHarness`/`AgentSession` seam; this dev-dep provides the trait for
# the test's in-proc fake session. A default (non-test) build never links it.
aion-integrations = { version = "0.8.0", path = "../aion-integrations" }
# The SS-5b auto-failover test reuses the aion-rs SS-5 example-build helper,
# which rebuilds the `hello-world` archive from source and advisory-locks the
# build dir; these dev-deps back that helper for the haematite test build.
aion-package = { version = "0.8.0", path = "../aion-package", features = ["test-support"] }
fs4 = { workspace = true }
libsql = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tokio-tungstenite = { workspace = true }
# Used ONLY by the feature-gated SS-5b auto-failover integration test, which
# stands up a real 3-node loopback haematite cluster through the raw
# DistributionEndpoint/Database harness (mirroring the aion-rs SS-5 demo). The
# test file is `#![cfg(feature = "haematite-backend")]`, so without that feature
# it compiles to nothing; this dev-dep only links for the haematite test build.
haematite = { workspace = true }
# Deploy e2e builds hostile DEFLATE-bomb archives; PackageBuilder writes
# Stored entries only, so it cannot produce one.
zip = { workspace = true }
# Enable the aion-store recording test doubles (ShardSeamSpy) for the
# decorator forwarding regression tests.
aion-store = { version = "0.8.0", path = "../aion-store", features = ["test-support"] }

[features]
# The ablative stack is the out-of-box default: a stock `aion-server` build links
# the haematite event-store backend and the liminal cross-node transport, and the
# runtime default backend is haematite (with `outbox.transport = liminal` selected
# whenever the transport is compiled). `libsql-backend` is the lightweight opt-out
# (`--no-default-features --features libsql-backend`); `haematite-backend` and
# `liminal-transport` remain named features so a slim build can opt out of either.
default = ["haematite-backend", "liminal-transport"]
auth = ["dep:jsonwebtoken", "dep:reqwest"]
# Selectable libSQL event-store backend. Now an explicit OPT-IN (it was a
# non-optional dep before): with it on, `store.backend = libsql` constructs an
# embedded `LibSqlStore` over `store.url`. A default build does not link it.
libsql-backend = ["dep:aion-store-libsql"]
# Cross-node outbox dispatch over liminal (#13-0 spike). OFF by default so a
# default build is byte-identical and never links liminal-sdk/beamr. When on,
# `outbox.transport = liminal` selects the liminal dispatch + completion path.
liminal-transport = ["dep:liminal-sdk", "dep:liminal-server", "dep:liminal"]
# Selectable haematite event-store backend. OFF by default so a default build is
# byte-identical and never links aion-store-haematite/haematite. When on,
# `store.backend = haematite` constructs a single-node HaematiteStore rooted at
# `store.data_dir` with `store.shard_count` shards.
haematite-backend = ["dep:aion-store-haematite"]

# The runnable multi-node failover demo: boots an in-process haematite cluster,
# kills the shard owner, and watches the SS-5b supervisor auto-recover the
# workflow. Requires the haematite backend (and `gleam` on PATH at runtime).
[[example]]
name = "failover_demo"
required-features = ["haematite-backend"]

# The runnable LSUB-5 capstone demo: boots an in-process haematite cluster + a
# real liminal worker, kills the fan-out shard owner MID-DISPATCH, and narrates
# the survivor adopting the shard and re-driving the fan-out to an exactly-once
# completion. Requires both the haematite backend and the liminal transport.
[[example]]
name = "lsub5_xnode_failover_demo"
required-features = ["haematite-backend", "liminal-transport"]
