[package]
name = "aion-store-libsql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aion-core = { path = "../aion-core" }
aion-store = { path = "../aion-store" }
libsql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
