[package]
name = "aion-store-libsql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Durable libSQL-backed event store implementation for Aion workflows."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-store-libsql"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "libsql", "persistence"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[dependencies]
aion-store = { version = "0.9.2", path = "../aion-store" }
libsql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["sync"] }
aion-core = { version = "0.9.2", path = "../aion-core" }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
