[package]
name = "aion-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Persistence contracts and in-memory event stores for Aion durable workflows."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-store"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "event-store", "persistence"]
categories = ["asynchronous", "development-tools"]

[lints]
workspace = true

[features]
recorder-write-token = []

[dependencies]
aion-core = { version = "0.5.0", path = "../aion-core" }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
