[package]
name = "aion-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust remote-worker SDK for executing Aion activities over the gRPC worker protocol."
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-worker"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "worker", "activities"]
categories = ["asynchronous", "development-tools"]

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.1.0", path = "../aion-core" }
aion-proto = { version = "0.1.0", path = "../aion-proto", features = ["generated"] }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait.workspace = true
tokio-stream = "0.1.18"
uuid = { workspace = true }

[dev-dependencies]
tokio-stream = { version = "0.1.18", features = ["net"] }
