[package]
name = "aion-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust remote-worker SDK for executing Aion activities over the gRPC worker protocol."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-worker"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "worker", "activities"]
categories = ["asynchronous", "development-tools"]

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.9.2", path = "../aion-core" }
# The harness-integration SDK — the TRAIT ONLY (`AgentHarness`/`AgentSession`).
# The worker drives ANY harness generically through this seam; it must NEVER
# depend on a concrete adapter (`aion-integration-norn`) or on `norn` itself
# (the §3A.4 no-norn-in-platform invariant). The concrete harness is injected by
# the binary composition root (aion-cli), never named here.
aion-integrations = { version = "0.9.2", path = "../aion-integrations" }
aion-proto = { version = "0.9.2", path = "../aion-proto", features = ["generated"] }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait.workspace = true
tokio-stream = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
# Cross-node worker transport over the liminal bus (LSUB-1). OPTIONAL and OFF by
# default: a default worker build links only the gRPC transport and never pulls
# liminal-sdk (nor its transitive beamr distribution). Enabled only by the
# `liminal-transport` feature. Resolved from crates.io (liminal-sdk); the default
# `std` feature carries the real TCP push client and the canonical wire codec.
liminal-sdk = { workspace = true, optional = true }
# Liminal core protocol types (LSUB-L2): the worker builds a
# `liminal::protocol::WorkerRegistration` and self-registers in-band via
# `PushClient::connect_with_registration`. Already in the dependency graph
# transitively (liminal-sdk depends on it); named directly only so the worker can
# construct the wire registration type. Optional, enabled only by
# `liminal-transport`.
liminal = { workspace = true, optional = true }

[features]
default = []
# Liminal worker transport: a `LiminalActivityWorker` that connects a server-push
# client, receives `DispatchRequest` frames, executes via the existing activity
# registry, and replies with a correlated `DispatchResponse`. OFF by default so a
# default worker build is byte-identical and never links liminal-sdk.
liminal-transport = ["dep:liminal-sdk", "dep:liminal"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
# The trait-driver tests stamp `ActivityEvent`/`InterventionCommand` timestamps.
chrono = { workspace = true }
