[package]
name = "aion-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Transport-agnostic Aion workflow engine with durability, replay, timers, and supervision."
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-rs"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "engine", "replay"]
categories = ["asynchronous", "development-tools"]

[lib]
name = "aion"

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.1.0", path = "../aion-core" }
aion-store = { version = "0.1.0", path = "../aion-store", features = ["recorder-write-token"] }
aion-package = { version = "0.1.0", path = "../aion-package" }
beamr = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
sha2.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
async-trait.workspace = true
saffron.workspace = true

[dev-dependencies]
aion-package = { version = "0.1.0", path = "../aion-package", features = ["test-support"] }
beamr = { workspace = true, features = ["test-support"] }
tracing-subscriber.workspace = true
