[package]
name = "aion-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Transport-agnostic Aion workflow engine with durability, replay, timers, and supervision."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-rs"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "engine", "replay"]
categories = ["asynchronous", "development-tools"]

[lib]
name = "aion"

[features]
# Runtime gate for end-to-end tests that drive the Gleam-SDK batch
# orchestrator example through live queries at the child-await yield point.
# The query pump protocol works at HEAD, but the example's child-result
# decode path hits beamr 0.4.9 VM gaps in `gleam_json`/`gleam_stdlib`
# (undefined `erlang:integer_to_list/2`, `bad argument` in json decode), so
# the gated tests cannot pass until the upstream beamr fixes land. See
# `tests/example_query_reentry.rs` and `examples/batch-orchestrator/README.md`.
beamr_query_reentry_fixed = []

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.2.0", path = "../aion-core" }
aion-store = { version = "0.2.0", path = "../aion-store", features = ["recorder-write-token"] }
aion-package = { version = "0.2.0", path = "../aion-package" }
beamr = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
sha2.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
async-trait.workspace = true
saffron.workspace = true

[dev-dependencies]
aion-package = { version = "0.2.0", path = "../aion-package", features = ["test-support"] }
beamr = { workspace = true, features = ["test-support"] }
tracing-subscriber.workspace = true
